--- a/source/_posts/跳表.md
+++ b/source/_posts/跳表.md
@@ -63,3 +63,115 @@ $$
 ### 实现细节
 
 每个跳表节点保存一个值以及下一列的**地址**
+
+```java
+class Skiplist {
+    
+    // 最大层数
+    static final int MAX_LEVEL = 32;
+    // 下一层留存概率
+    static final double P = 0.5;
+    // 哨兵节点
+    private SkiplistNode head;
+    // 当前最大层数
+    private int level;
+    // 用于插入时随机分配层数
+    private Random random;
+
+    public Skiplist() {
+        this.head = new SkiplistNode(-1, MAX_LEVEL);
+        this.level = 0;
+        this.random = new Random();
+    }
+    
+    public boolean search(int target) {
+        SkiplistNode cur = this.head;
+        // 从最高层开始向下查找
+        for (int i = this.level - 1; i >= 0; i--) {
+            // 在当前层从左往右查找不大于target的最大节点
+            while (cur.forward[i] != null && cur.forward[i].val < target) {
+                cur = cur.forward[i];
+            }
+        }
+        // 下一节点
+        cur = cur.forward[0];
+        if (cur != null && cur.val == target) {
+            return true;
+        }
+        return false;
+    }
+    
+    public void add(int num) {
+        // 保存每层需要更新下一节点的列地址
+        SkiplistNode[] update = new SkiplistNode[MAX_LEVEL];
+        Arrays.fill(update, this.head);
+        SkiplistNode cur = this.head;
+        for (int i = this.level - 1; i >= 0; i--) {
+            while (cur.forward[i] != null && cur.forward[i].val < num) {
+                cur = cur.forward[i];
+            }
+            update[i] = cur;
+        }
+        int lv = this.randomLevel();
+        // 更新层数
+        this.level = Math.max(this.level, lv);
+        SkiplistNode newNode = new SkiplistNode(num, lv);
+        // 更新列
+        for (int i = 0; i < lv; i++) {
+            newNode.forward[i] = update[i].forward[i];
+            update[i].forward[i] = newNode;
+        }
+    }
+    
+    public boolean erase(int num) {
+        SkiplistNode[] update = new SkiplistNode[MAX_LEVEL];
+        SkiplistNode cur = this.head;
+        for (int i = this.level - 1; i >= 0; i--) {
+            while (cur.forward[i] != null && cur.forward[i].val < num) {
+                cur = cur.forward[i];
+            }
+            update[i] = cur;
+        }
+        cur = cur.forward[0];
+        // 不在跳表里
+        if (cur == null || cur.val != num) {
+            return false;
+        }
+        for (int i = 0; i < this.level; i++) {
+            if (update[i].forward[i] != cur) {
+                break;
+            }
+            update[i].forward[i] = cur.forward[i];
+        }
+        // 更新层数
+        while (this.level > 1 && this.head.forward[this.level - 1] == null) {
+            this.level--;
+        }
+        return true;
+    }
+
+    private int randomLevel() {
+        int lv = 1;
+        while (random.nextDouble() < P && lv < MAX_LEVEL) {
+            lv++;
+        }
+        return lv;
+    }
+    
+}
+
+class SkiplistNode {
+    
+    // 节点值
+    int val;
+    // 下一列的地址
+    SkiplistNode[] forward;
+
+    public SkiplistNode(int val, int maxLevel) {
+        this.val = val;
+        this.forward = new SkiplistNode[maxLevel];
+    }
+    
+}
+```
+
