--- a/source/_posts/线性代数（一）.md
+++ b/source/_posts/线性代数（一）.md
@@ -33,7 +33,7 @@ $$
 
    把矩阵看作是向量列表，那么矩阵就是以这些向量为基底向量张成的向量空间，矩阵的秩就是向量空间的维度
    $$
-   \symbf{W}=[\vec{v_{1}},\;\vec{v_{2}}...]
+   \mathbf{W}=[\vec{v_{1}},\;\vec{v_{2}}...]
    $$
 
 2. 矩阵是一个线性变换
@@ -65,7 +65,7 @@ $$
 
 以矩阵是一个变换的角度去看矩阵乘法
 $$
-\symbf{A}\symbf{B}\vec{v}=\symbf{C}\vec{v}
+\mathbf{A}\mathbf{B}\vec{v}=\mathbf{C}\vec{v}
 $$
 如果上式成立，那么意味着对向量进行C变换，应该与先进行B变换再进行A变换的结果一致，则称矩阵C是矩阵A、B的复合矩阵，类似于复合函数
 $$
