--- a/source/_posts/推荐系统.md
+++ b/source/_posts/推荐系统.md
@@ -43,3 +43,19 @@ tags:
 ### 反转实验
 
 在新的推全层上保留一个小的反转桶，使用**旧策略**，以**长期**观察策略对业务指标影响
+
+## 数据存储
+
+### user emb和item emb的存储
+
+user emb存储到KV表，通过user-id快速获取user emb
+
+item emb通常存储到专业向量数据库
+
+## 最近邻查找
+
+给定一个查询向量$q$，计算每一个候选向量$v$与它的近邻程度（如欧式距离、内积、余弦相似度等）返回最近邻结果
+
+### ANN（近似最近邻查找）
+
+直接计算最近邻计算开销巨大，采用先**聚类/分块**取得索引，查询向量先与索引进行匹配，再与索引所在聚类的其他向量做计算，减少计算开销
