--- a/source/_posts/推荐系统.md
+++ b/source/_posts/推荐系统.md
@@ -20,6 +20,8 @@ tags:
 3. 精排，用**大规模神经网络模型**对候选进行**打分**、**排序**、**截断（可选）**，这是实现**精细**推荐的核心（百级）
 4. 重排，对精排后的数据进行**采样**、**排序**优化、**多样性**优化、**插入**广告或其他内容（数十级）
 
+前期融合模型（在输入神经网络前就进行了特征交叉）无法在召回阶段使用
+
 ## 测试链路
 
 **离线实验**->**A/B测试（用户分流，在线测试）**->**全量测试**
