--- a/source/_posts/数据处理.md
+++ b/source/_posts/数据处理.md
@@ -33,3 +33,8 @@ tags:
 4. 分桶，得到的桶可视为离散特征做进一步处理
 5. 函数变换
 6. 特征交叉
+
+## 语义ID
+
+语义ID是对embedding向量的量化，对于$L$层语义ID，每层通过聚类获得$K$个聚类中心，对于要量化的emb，查找当前层最近的聚类中心，它的序号即为量化后的一个索引值，将emb减去聚类中心得到残差向量进入下一层，以此类推直到结束，由此得到了量化后的语义ID，语义相近的emb在量化后在语义空间中也是相近的
+
